# Voice_Driven_Humanoid_Head

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main_whiteboard.py  pyproject.toml  setup.sh  speech_synthesis.py  transcription.py
.github/workflows/: main.yml
lib/: AudioTranscription.py  AudioTranscription2.py  CanBusSocket.py  Decision.py  DecodeMove.py  KinematicModel.py  ProtocolV1.py  RobotHead.py  TextToSpeech.py  test_cam_flux_video.py  test_cam_image.py  test_cam_mediapipe.py
software/: RobotHead_agent.py  Whiteboard.py  audiomp3.py  decision.py  main.py  open.sh  robot_head.igssystem  sender.py  setup.sh  setup_laptop.sh  setup_rpi.sh  speech.py  test_robothead.igsscript  transcription.py
software/install/: UPSSITECH_RSI.igslicense  dependencies.sh  ingescape.sh
software/lib/: AnimatedScreen.py  AudioTranscription.py  AudioTranscription2.py  CameraStream.py  CanBusGsUsb.py  CanBusSocket.py  Decision.py  DecodeMove.py  KinematicModel.py  LCD_1inch28.py  MyActuatorRMD.py  ProtocolV1.py  ProtocolV2.py  ProtocolV3.py  Rasp.py  RobotHead.py  RobotHead_agent.py  RobotHead_class.py  RobotHead_test.py  RobotInteractive.py  RobotNeck.py  TextToSpeech.py  Whiteboard.py  lcdconfig.py  main.py  test.py
software/tests/: speech_gtts.py  speech_gtts_multi.py  speech_gtts_multi_live.py  speech_tts_models.py  speech_tts_multi.py  test_alsa.py
