[project]
name = "Voice_Driven_Humanoid_Head"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gTTS",
    "pydub",
    "numpy==1.24.0",
    "pillow",
    "sounddevice",
    "scipy",
    "can",
    "vosk",
    "opencv-python-headless",
    "meson>=1.7.0",
    "spidev>=3.6",
    "rpi-gpio>=0.7.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
