[project]
name = "Voice_Driven_Humanoid_Head"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gTTS",
    "pydub",
    "numpy",
    "pillow",
    "sounddevice",
    "scipy",
    "can",
    "vosk",
    "opencv-python",
    "spidev",
    "rpi-gpio",
    "thread",
    "flask",
    "mediapipe-rpi4>=0.8.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
